--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
             <p>@theigorsch</p>
             <p>Em todas as redes!</p>
         </div>
+        <div>
+            <button></button>
+            <span></span>
+        </div>
+        <ul>
+            <li>
+                <a href="instagram.com/theigorsch" target="_blank">Instagram</a>
+            </li>
+            <li>
+                <a href="https://x.com/theigorsch" target="_blank">Twitter (X)</a>
+            </li>
+            <li>
+                <a href="https://linkedin.com/in/theigorsch" target="_blank">LinkedIn</a>
+            </li>
+            <li>
+                <a href="https;//github.com/TheIgorSch" target="_blank">Github</a>
+            </li>
+        </ul>
         
     </div>
 </body>
