new background and buttons style

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="profile">
             <img src="./assets/profile-image.JPG"></img>
             <p>@theigorsch</p>
-            <p>Em todas as redes!</p>
+            <p1>Em todas as redes!</p1>
         </div>
         <div>
             <button></button>
