--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <ul>
             <li>
-                <a href="instagram.com/theigorsch" target="_blank">Instagram</a>
+                <a href="https://instagram.com/theigorsch" target="_blank">Instagram</a>
             </li>
             <li>
                 <a href="https://x.com/theigorsch" target="_blank">Twitter (X)</a>
@@ -32,7 +32,7 @@
                 <a href="https://linkedin.com/in/theigorsch" target="_blank">LinkedIn</a>
             </li>
             <li>
-                <a href="https;//github.com/TheIgorSch" target="_blank">Github</a>
+                <a href="https://github.com/TheIgorSch" target="_blank">Github</a>
             </li>
         </ul>
         
