switch button function and animation, prof/bg query selection

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
             <p1>Em todas as redes!</p1>
         </div>
     
-        <div id="switch">
+        <div id="switch" onclick="toggleMode()">
+
             <button></button>
             <span></span>
-        </div>
+          </div>
+
+
         <ul>
             <li>
                 <a href="https://instagram.com/theigorsch" target="_blank">Instagram</a>
@@ -64,7 +67,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-<script> </script>
+<script src="script.js"></script>
 
 </body>
 </html>
